k8s-manifest-files/weather-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app-service
  namespace: weather-app-jenkins
  labels:
    app: weather-app
spec:
  type: LoadBalancer
  selector:
    app: weather-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
